2006-11-04  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_util.c, db.c, modules/dbmysql.c:
	re-add the MR optimization

2006-11-03  Aaron Stone  <aaron@serendipity.cx>

	* sql/mysql/migrate_from_2.0_to_2.2.mysql,
	sql/mysql/2_1_7-2_2_0.mysql:
	Make the envelope table creations consistent.

2006-11-03  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c, modules/dbpgsql.c:
	fully revert the utf8 behaviour. sql_ascii is the only supported db
	encoding again for postgresql
	* dbmail-message.c:
	removed remaining utf8 conversion

2006-11-02  Aaron Stone  <aaron@serendipity.cx>

	* authmodule.c, dbmodule.c, sortmodule.c:
	Changed count of paths to attempt, and added a comment about it.
	Added more debugging info, closed a minor memory leak.
	* debug.h, modules/authsql.c:
	Removed relics of memtst and func_memtst.

2006-11-02  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_message.c, misc.c, modules/dbpgsql.c:
	push utf8 conversion to pgsql driver and remove utf7 encoding from
	subject in envelope

2006-11-01  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/dbmail-ldap.templates, 
	  debian/dbmail-sieve.postinst, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/it.po, debian/po/ja.po, 
	  debian/po/nl.po, debian/po/pt_BR.po, debian/po/templates.pot, 
	  test-scripts/testlmtp.txt:
	po files updated after completing the templates
	* misc.c:
	add missing va_end call in g_list_append_printf
	* config.c:
	trace conversion
	* serverparent.c:
	minor cleanup
	* Makefile.am:
	AM_LDFLAGS modified
	* misc.c:
	TRACE migration and imap_cleanup_address fix
	* acl.c, authmodule.c, check_dbmail.h, check_dbmail_mailbox.c, config.c, 
	  dbmail-mailbox.c, dbmail-message.c, dbmail-user.c, dbmail.h.in, 
	  dbmodule.c, debug.c, dm_base64.c, dm_imaputil.c, dm_md5.c, dsn.c, 
	  imap4.c, imapcommands.c, lmtp.c, main.c, modules/authldap.c, 
	  modules/authsql.c, modules/dbmysql.c, modules/dbpgsql.c, 