@@ -1,3 +1,10 @@
+2006-11-05  Paul J Stevens <paul@nfg.nl>
+
+	* imapcommands.c:
+	fix sort/search/thread bug
+	* debian/control:
+	update dependencies
+
 2006-11-04  Paul J Stevens <paul@nfg.nl>
 
 	* check_dbmail_util.c, db.c, modules/dbmysql.c:
